# django-ivalua-api

./: .env  .gitignore  Dockerfile  README.md  check_csv_files.sh  check_encoding.sh  docker-compose.yml  docker_import_all.ps1  docker_import_all.sh  import_all.sh  import_all_fixed.ps1  import_all_fixed.sh  import_reference_data.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  set_passwords.py
accounting/: README.md  __init__.py  admin.py  apps.py  serializers.py  urls.py  views.py
accounting/data/: activite.csv  commune_insee.csv  commune_insee.csv.bak  exercice_comptable.csv  journal_comptable.csv  type-de-comptabilite.csv  type-de-compte-client.csv  type_d_ecrirture_comptable.csv  type_d_engagement.csv  type_lettrage.csv  type_payeur.csv  type_prestation.csv  type_tarification.csv
accounting/docs/: _copilot.md  api.md  architecture.md  audit.md  best_practices.md  development.md  financial_statements.md  import_data.md  index.md  (+4 more)
authentication/: admin.py  api_views.py  apps.py  auth_backends.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
core/: apps.py  models.py
docs/: 1. Modèles django.md  readme.md
orders/: admin.py  api_views.py  models.py  serializers.py  urls.py
organizations/: apps.py
programs/: apps.py
project/: admin.py  base.py  settings.py  urls.py
resources/: SEQENS_Swagger-v1.0.6.yml  admin.py  extract_orders_data_from_ivalua.py  github.txt  modele_comptable_chatgpt.py  models.py  orders_data_20250514_140030.json
suppliers/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py
(+70 files in other folders)
